other/prevent-bare-pods/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: prevent-bare-pods
policies:
- ../prevent-bare-pods.yaml
resources:
- ../.chainsaw-test/pod-bad.yaml
- ../.chainsaw-test/pod-good.yaml
results:
- policy: prevent-bare-pods
  rule: bare-pods
  kind: Pod
  resources:
  - badpod01
  result: fail
- policy: prevent-bare-pods
  rule: bare-pods
  kind: Pod
  resources:
  - goodpod01
  result: pass
